--- a/contakt.html
+++ b/contakt.html
@@ -11,7 +11,7 @@
       }
 
       body {
-         background-image: url(/Images/gif-800x600.gif);
+         background-image: url(Images/gif-800x600.gif);
          background-size: 100%;
       }
 
